Fixes #RHIROS-786 - handle exception on invalid value for rating
With this commit, server will return proper error code & message
instead of 500 server error on submitting invalid value against
rating via /recommendation_ratings POST API request.
